--- a/MLPRegressor.ipynb
+++ b/MLPRegressor.ipynb
@@ -2,8 +2,240 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fa4f7304-eb57-4d11-90d5-a0b1086a4f3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "384e9d10-c2b3-4d18-8a63-2c5bc9cb64f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(176, 21)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Week</th>\n",
+       "      <th>Result</th>\n",
+       "      <th>Rec</th>\n",
+       "      <th>Home</th>\n",
+       "      <th>Opp</th>\n",
+       "      <th>TmScore</th>\n",
+       "      <th>OppScore</th>\n",
+       "      <th>O_1stD</th>\n",
+       "      <th>O_Tot_yd</th>\n",
+       "      <th>...</th>\n",
+       "      <th>O_R_Yd</th>\n",
+       "      <th>O_TO</th>\n",
+       "      <th>D_1stD</th>\n",
+       "      <th>D_Tot_Yd</th>\n",
+       "      <th>D_P_Yd</th>\n",
+       "      <th>D_R_Yd</th>\n",
+       "      <th>D_TO</th>\n",
+       "      <th>Offence</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp.Tms</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bills</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Chicago Bears</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>386.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>322.0</td>\n",
+       "      <td>188.0</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>21.58</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>-0.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bills</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2-0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Indianapolis Colts</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>371.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>354.0</td>\n",
+       "      <td>245.0</td>\n",
+       "      <td>109.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>7.11</td>\n",
+       "      <td>-1.29</td>\n",
+       "      <td>-3.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bills</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3-0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Tampa Bay Buccaneers</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>407.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>446.0</td>\n",
+       "      <td>411.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20.56</td>\n",
+       "      <td>-15.15</td>\n",
+       "      <td>3.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Bills</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Arizona Cardinals</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>401.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>465.0</td>\n",
+       "      <td>249.0</td>\n",
+       "      <td>216.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.94</td>\n",
+       "      <td>-21.72</td>\n",
+       "      <td>-2.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bills</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Seattle Seahawks</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>476.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>354.0</td>\n",
+       "      <td>262.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>13.76</td>\n",
+       "      <td>-6.71</td>\n",
+       "      <td>-0.05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Team  Week  Result  Rec  Home                   Opp  TmScore  OppScore  \\\n",
+       "0  Bills     1       1  1-0     1         Chicago Bears     34.0      14.0   \n",
+       "1  Bills     2       1  2-0     0    Indianapolis Colts     27.0      24.0   \n",
+       "2  Bills     3       1  3-0     1  Tampa Bay Buccaneers     34.0      24.0   \n",
+       "3  Bills     4       0  3-1     1     Arizona Cardinals     20.0      37.0   \n",
+       "4  Bills     5       1  4-1     0      Seattle Seahawks     26.0      17.0   \n",
+       "\n",
+       "   O_1stD  O_Tot_yd  ...  O_R_Yd  O_TO  D_1stD  D_Tot_Yd  D_P_Yd  D_R_Yd  \\\n",
+       "0    18.0     386.0  ...    74.0   1.0    24.0     322.0   188.0   134.0   \n",
+       "1    21.0     371.0  ...   101.0   2.0    22.0     354.0   245.0   109.0   \n",
+       "2    22.0     407.0  ...    76.0   1.0    27.0     446.0   411.0    35.0   \n",
+       "3    24.0     401.0  ...   121.0   2.0    27.0     465.0   249.0   216.0   \n",
+       "4    24.0     476.0  ...   118.0   1.0    22.0     354.0   262.0    92.0   \n",
+       "\n",
+       "   D_TO  Offence  Defense  Sp.Tms  \n",
+       "0   2.0    21.58     0.85   -0.52  \n",
+       "1   2.0     7.11    -1.29   -3.09  \n",
+       "2   1.0    20.56   -15.15    3.43  \n",
+       "3   1.0     8.94   -21.72   -2.64  \n",
+       "4   2.0    13.76    -6.71   -0.05  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path = (\"./resources/Team_df.csv\")\n",
+    "com_data = pd.read_csv(path)\n",
+    "print(com_data.shape)\n",
+    "com_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f14cfe1c-ac38-4bad-822e-c8f69a644ee4",
    "metadata": {},
    "outputs": [],
    "source": []
