update in code and Teamcsv file

--- a/GradienBoostingScore.ipynb
+++ b/GradienBoostingScore.ipynb
@@ -678,7 +678,7 @@
     }
    ],
    "source": [
-    "score, winner = Score_Predictor('Rams', 'Patriots')"
+    "scores, winner = Score_Predictor('Rams', 'Patriots')"
    ]
   },
   {
