--- a/Teamcsv.ipynb
+++ b/Teamcsv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "b16ab38a-3d4e-45b1-8467-65a76a1226d2",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "7b7dcc9f-55ec-4a33-9af1-32782719eee9",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "1cabae98-cee7-455a-bffe-e23f26068f40",
    "metadata": {},
    "outputs": [],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "9311f295-b243-4e9e-b288-63242070f433",
    "metadata": {},
    "outputs": [
@@ -739,7 +739,7 @@
        "15     0.38    12.27    4.51  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "20c00875-73c7-4c28-aa36-1d9d137ab4a3",
    "metadata": {},
    "outputs": [
@@ -1289,7 +1289,7 @@
        "[16 rows x 21 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1307,15 +1307,15 @@
     "patriots.insert(0,\"Team\",'Patriots')\n",
     "eagles.insert(0,\"Team\",'Eagles')\n",
     "fortyniners.insert(0,\"Team\",'49ers')\n",
-    "steelers.insert(0,\"Team\",'steelers')\n",
-    "raiders.insert(0,\"Team\",'steelers')\n",
+    "steelers.insert(0,\"Team\",'Steelers')\n",
+    "raiders.insert(0,\"Team\",'Raiders')\n",
     "\n",
     "rams"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "95c19847-9ba5-4de3-a64d-c5c0d85bf393",
    "metadata": {},
    "outputs": [
@@ -1510,7 +1510,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>steelers</td>\n",
+       "      <td>Raiders</td>\n",
        "      <td>13</td>\n",
        "      <td>L</td>\n",
        "      <td>6-6</td>\n",
@@ -1534,7 +1534,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>steelers</td>\n",
+       "      <td>Raiders</td>\n",
        "      <td>14</td>\n",
        "      <td>L</td>\n",
        "      <td>6-7</td>\n",
@@ -1558,7 +1558,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>steelers</td>\n",
+       "      <td>Raiders</td>\n",
        "      <td>15</td>\n",
        "      <td>W</td>\n",
        "      <td>7-7</td>\n",
@@ -1582,7 +1582,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>steelers</td>\n",
+       "      <td>Raiders</td>\n",
        "      <td>16</td>\n",
        "      <td>W</td>\n",
        "      <td>8-7</td>\n",
@@ -1606,7 +1606,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>steelers</td>\n",
+       "      <td>Raiders</td>\n",
        "      <td>17</td>\n",
        "      <td>W</td>\n",
        "      <td>9-7</td>\n",
@@ -1634,18 +1634,18 @@
        "</div>"
       ],
       "text/plain": [
-       "        Team  Week Result  Rec Home                       Opp  TmScore  \\\n",
-       "0      Bills     1      W  1-0  NaN             Chicago Bears     34.0   \n",
-       "1      Bills     2      W  2-0    @        Indianapolis Colts     27.0   \n",
-       "2      Bills     3      W  3-0  NaN      Tampa Bay Buccaneers     34.0   \n",
-       "3      Bills     4      L  3-1  NaN         Arizona Cardinals     20.0   \n",
-       "4      Bills     5      W  4-1    @          Seattle Seahawks     26.0   \n",
-       "..       ...   ...    ...  ...  ...                       ...      ...   \n",
-       "11  steelers    13      L  6-6  NaN  Washington Football Team     15.0   \n",
-       "12  steelers    14      L  6-7    @        Kansas City Chiefs      9.0   \n",
-       "13  steelers    15      W  7-7    @          Cleveland Browns     16.0   \n",
-       "14  steelers    16      W  8-7  NaN            Denver Broncos     17.0   \n",
-       "15  steelers    17      W  9-7    @        Indianapolis Colts     23.0   \n",
+       "       Team  Week Result  Rec Home                       Opp  TmScore  \\\n",
+       "0     Bills     1      W  1-0  NaN             Chicago Bears     34.0   \n",
+       "1     Bills     2      W  2-0    @        Indianapolis Colts     27.0   \n",
+       "2     Bills     3      W  3-0  NaN      Tampa Bay Buccaneers     34.0   \n",
+       "3     Bills     4      L  3-1  NaN         Arizona Cardinals     20.0   \n",
+       "4     Bills     5      W  4-1    @          Seattle Seahawks     26.0   \n",
+       "..      ...   ...    ...  ...  ...                       ...      ...   \n",
+       "11  Raiders    13      L  6-6  NaN  Washington Football Team     15.0   \n",
+       "12  Raiders    14      L  6-7    @        Kansas City Chiefs      9.0   \n",
+       "13  Raiders    15      W  7-7    @          Cleveland Browns     16.0   \n",
+       "14  Raiders    16      W  8-7  NaN            Denver Broncos     17.0   \n",
+       "15  Raiders    17      W  9-7    @        Indianapolis Colts     23.0   \n",
        "\n",
        "    OppScore  O_1stD  O_Tot_yd  ...  O_R_Yd  O_TO  D_1stD  D_Tot_Yd  D_P_Yd  \\\n",
        "0       14.0    18.0     386.0  ...    74.0   NaN    24.0     322.0   188.0   \n",
@@ -1676,7 +1676,7 @@
        "[224 rows x 21 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1690,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "f412401d-25a6-4db7-8ff8-51a1998d6499",
    "metadata": {},
    "outputs": [],
@@ -1700,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "442ca1e0-a506-4c2c-bb2e-8cea06733bf9",
    "metadata": {},
    "outputs": [
@@ -1899,7 +1899,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1911,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "b6c754c0-46b0-4893-a4f9-db07a49c5396",
    "metadata": {},
    "outputs": [
@@ -2110,7 +2110,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2139,7 +2139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "3b34ec95-9825-4528-90f1-419ccabf5f93",
    "metadata": {},
    "outputs": [],
