--- a/testing_notebook.ipynb
+++ b/testing_notebook.ipynb
@@ -153,11 +153,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2851732a-88fa-4483-9a8f-44307dd9c01c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bills = st.image(\"chiefslogo.png\", width=40)"
+   ]
   },
   {
    "cell_type": "code",
@@ -228,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "951da08a-69e3-4b67-900a-9047adefb6fb",
    "metadata": {},
    "outputs": [
@@ -238,7 +240,7 @@
        "DeltaGenerator(_root_container=1, _provided_cursor=None, _parent=DeltaGenerator(_root_container=0, _provided_cursor=None, _parent=None, _block_type=None, _form_data=None), _block_type=None, _form_data=None)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
