--- a/testing_notebook.ipynb
+++ b/testing_notebook.ipynb
@@ -251,11 +251,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "91599c9f-5a88-44b5-bcf8-eaace476d510",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# saving the model to a file to be able to use it later in streamlit. save it in same folder as the .py file\n",
+    "import pickle\n",
+    "pickle.dump(lr, open(' ./model.sav', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6ecc6c7-d88a-43ea-ba5e-863c2e0f6451",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#load model in streamlit\n",
+    "model = pickle.load(open('model.sav', 'rb'))"
+   ]
   }
  ],
  "metadata": {
