addressed the predictor with fillna and full name of team including city
X_Playoff_test.fillna(0, inplace = True) # added to address the NANs that was causing the error

--- a/MLPRegressor.ipynb
+++ b/MLPRegressor.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "fa4f7304-eb57-4d11-90d5-a0b1086a4f3b",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "384e9d10-c2b3-4d18-8a63-2c5bc9cb64f6",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +218,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,8 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "f14cfe1c-ac38-4bad-822e-c8f69a644ee4",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +474,7 @@
        "[5 rows x 58 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,8 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "2aa68c95-613d-430a-ab4c-12f493bf5049",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +593,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d697f4dc-11a3-4cb7-9c60-9deca573449b",
    "metadata": {},
    "source": [
     "## Model"
@@ -605,15 +600,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "5571c111-ba4e-4e40-8136-df19437978b4",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.6786394713941006\n"
+      "4.5895263387625445\n"
      ]
     },
     {
@@ -648,8 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "6cbbb688-c504-4ad8-9069-2c065417838d",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,6 +694,7 @@
     "    team2_test[['D_1stD','D_Tot_Yd','D_P_Yd','D_R_Yd','D_TO']] = team1_test[['O_1stD','O_Tot_yd','O_P_Yd','O_R_Yd','O_TO']]\n",
     "    \n",
     "    X_Playoff_test = pd.concat([team1_test, team2_test])\n",
+    "    X_Playoff_test.fillna(0, inplace = True) # added to address the NANs that was causing the error\n",
     "    \n",
     "    scores = MLP_model.predict(X_Playoff_test)\n",
     "    print(team1, \"will score\", round(scores[0], 1))\n",
@@ -718,8 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "8a9bef4c-481e-4aaf-9bff-0b1ee7c5bfb1",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -737,45 +730,312 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "2dfdee55-2c35-48f3-89db-5a815a97e23c",
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Input contains NaN, infinity or a value too large for dtype('float64').",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/xn/d9p0xm1s6qsf6_xczswgw90h0000gn/T/ipykernel_54897/2440567488.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mscores\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwinner\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mScore_Predictor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Rams'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Patriots'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/var/folders/xn/d9p0xm1s6qsf6_xczswgw90h0000gn/T/ipykernel_54897/2567660968.py\u001b[0m in \u001b[0;36mScore_Predictor\u001b[0;34m(home_team, away_team)\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0mX_Playoff_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mteam1_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mteam2_test\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m     \u001b[0mscores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMLP_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_Playoff_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     51\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mteam1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"will score\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mteam2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"will score\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/envs/dev/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m   1380\u001b[0m         \"\"\"\n\u001b[1;32m   1381\u001b[0m         \u001b[0mcheck_is_fitted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1382\u001b[0;31m         \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1383\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1384\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/envs/dev/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py\u001b[0m in \u001b[0;36m_predict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    679\u001b[0m             \u001b[0mThe\u001b[0m \u001b[0mdecision\u001b[0m \u001b[0mfunction\u001b[0m \u001b[0mof\u001b[0m \u001b[0mthe\u001b[0m \u001b[0msamples\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0meach\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    680\u001b[0m         \"\"\"\n\u001b[0;32m--> 681\u001b[0;31m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'csr'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'csc'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    682\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    683\u001b[0m         \u001b[0;31m# Make sure self.hidden_layer_sizes is a list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/envs/dev/lib/python3.7/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36minner_f\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     71\u001b[0m                           FutureWarning)\n\u001b[1;32m     72\u001b[0m         \u001b[0mkwargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0marg\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 73\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     74\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0minner_f\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/envs/dev/lib/python3.7/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, estimator)\u001b[0m\n\u001b[1;32m    644\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mforce_all_finite\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    645\u001b[0m             _assert_all_finite(array,\n\u001b[0;32m--> 646\u001b[0;31m                                allow_nan=force_all_finite == 'allow-nan')\n\u001b[0m\u001b[1;32m    647\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    648\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mensure_min_samples\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/envs/dev/lib/python3.7/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36m_assert_all_finite\u001b[0;34m(X, allow_nan, msg_dtype)\u001b[0m\n\u001b[1;32m     98\u001b[0m                     \u001b[0mmsg_err\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m                     (type_err,\n\u001b[0;32m--> 100\u001b[0;31m                      msg_dtype if msg_dtype is not None else X.dtype)\n\u001b[0m\u001b[1;32m    101\u001b[0m             )\n\u001b[1;32m    102\u001b[0m     \u001b[0;31m# for object dtype data, we only check for NaNs (GH-13254)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Input contains NaN, infinity or a value too large for dtype('float64')."
-     ]
-    }
-   ],
    "source": [
-    "scores, winner = Score_Predictor('Rams', 'Patriots')"
+    "# Potentially add for loop to insert the winner to next round (The names have to be in full names) and add the seeding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NFC Playoff Round 1 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b59a2ac0-6c33-4546-991b-d7ea1ff10b8c",
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Philadelphia Eagles will score 22.2\n",
+      "Tampa Bay Buccaneers will score 29.0\n",
+      "Tampa Bay Buccaneers are the WINNERS!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores, winner = Score_Predictor('Philadelphia Eagles', 'Tampa Bay Buccaneers')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "San Francisco 49ers will score 25.0\n",
+      "Dallas Cowboys will score 21.4\n",
+      "San Francisco 49ers are the WINNERS!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores, winner = Score_Predictor('San Francisco 49ers', 'Dallas Cowboys')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arizona Cardinals will score 27.5\n",
+      "Los Angeles Rams will score 22.1\n",
+      "Arizona Cardinals are the WINNERS!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores, winner = Score_Predictor('Arizona Cardinals', 'Los Angeles Rams')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### AFC Playoff Round 1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pittsburgh Steelers will score 21.6\n",
+      "Kansas City Chiefs will score 26.5\n",
+      "Kansas City Chiefs are the WINNERS!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores, winner = Score_Predictor('Pittsburgh Steelers', 'Kansas City Chiefs')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Las Vegas Raiders will score 23.8\n",
+      "Cincinnati Bengals will score 28.6\n",
+      "Cincinnati Bengals are the WINNERS!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores, winner = Score_Predictor('Las Vegas Raiders', 'Cincinnati Bengals')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buffalo Bills will score 18.3\n",
+      "New England Patriots will score 23.5\n",
+      "New England Patriots are the WINNERS!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores, winner = Score_Predictor('Buffalo Bills', 'New England Patriots')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NFC Playoff Round 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buffalo Bills will score 18.3\n",
+      "New England Patriots will score 23.5\n",
+      "New England Patriots are the WINNERS!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores, winner = Score_Predictor('Buffalo Bills', 'New England Patriots')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buffalo Bills will score 18.3\n",
+      "New England Patriots will score 23.5\n",
+      "New England Patriots are the WINNERS!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores, winner = Score_Predictor('Buffalo Bills', 'New England Patriots')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NFC Playoff Round 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buffalo Bills will score 18.3\n",
+      "New England Patriots will score 23.5\n",
+      "New England Patriots are the WINNERS!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores, winner = Score_Predictor('Buffalo Bills', 'New England Patriots')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buffalo Bills will score 18.3\n",
+      "New England Patriots will score 23.5\n",
+      "New England Patriots are the WINNERS!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores, winner = Score_Predictor('Buffalo Bills', 'New England Patriots')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NFC Championship"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buffalo Bills will score 18.3\n",
+      "New England Patriots will score 23.5\n",
+      "New England Patriots are the WINNERS!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores, winner = Score_Predictor('Buffalo Bills', 'New England Patriots')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### AFC Championship"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buffalo Bills will score 18.3\n",
+      "New England Patriots will score 23.5\n",
+      "New England Patriots are the WINNERS!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores, winner = Score_Predictor('Buffalo Bills', 'New England Patriots')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Suberbowl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buffalo Bills will score 18.3\n",
+      "New England Patriots will score 23.5\n",
+      "New England Patriots are the WINNERS!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores, winner = Score_Predictor('Buffalo Bills', 'New England Patriots')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -789,7 +1049,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
